# nutrition-tracker

./: .gitignore  README.md  main.py  pyproject.toml  test_out2.txt
backend/: .env.example  main.py  requirements.txt  test_output.txt
backend/agents/: __init__.py  graph.py  state.py
backend/agents/nodes/: __init__.py  food_parser.py  goal_analyzer.py  image_detector.py  input_router.py  nutrition_lookup.py  recommender.py  stt_node.py
backend/database/: __init__.py  supabase_client.py
backend/models/: .gitkeep  exercise_scaler.pkl  portion_estimator.keras  portion_scaler.pkl
backend/tests/: conftest.py  run_tests.sh  test_nodes.py  test_routes.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  main.jsx  supabaseClient.js
frontend/src/api/: client.js
frontend/src/components/: CalorieRing.jsx  ProteinBar.jsx  SuggestionFeed.jsx  WeeklyChart.jsx
frontend/src/pages/: Dashboard.jsx  Leaderboard.jsx  LogExercise.jsx  LogMeal.jsx  Login.jsx
