[project]
name = "nutrition-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "fastapi>=0.135.1",
    "httpx>=0.28.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.17",
    "langchain-groq>=1.1.2",
    "langgraph>=1.0.10",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.22",
    "supabase>=2.28.0",
    "uvicorn>=0.41.0",
]
